format; remove lp/cp; nits

--- a/liberty/lib/SLAMP/CMakeLists.txt
+++ b/liberty/lib/SLAMP/CMakeLists.txt
@@ -4,7 +4,7 @@ file(GLOB SRCS
 )
 
 # Compilation flags
-set_source_files_properties(${SRCS} PROPERTIES COMPILE_FLAGS "-std=c++17 -fPIC")
+set_source_files_properties(${SRCS} PROPERTIES COMPILE_FLAGS "-std=c++17 -fPIC -g -Wall")
 set(PassName "SLAMP")
 
 list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")
